# brewtal

./: .env  .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js
prisma/: schema.prisma
prisma/migrations/20230824120711_init/: migration.sql
src/: app.d.ts  app.scss  hooks.server.ts  stores.ts
src/lib/: authService.ts  supabaseClient.ts  variables.ts
src/lib/components/: LoginComponent.svelte  NewsLetterSignup.svelte
src/lib/components/containers/: Container.svelte  MainFeed.svelte  Modal.svelte
src/lib/components/inputs/: AppButton.svelte
src/lib/components/layout/: AppSidePanel.svelte  Footer.svelte  HeaderBar.svelte
src/lib/components/unique/: LeftSideNavigation.svelte
src/lib/server/: .env.example  Cargo.toml
src/lib/server/migrations/2023-02-19-022438_create_newsletter_users/: down.sql  up.sql
src/lib/server/src/: lib.rs  main.rs  models.rs  schema.rs
src/lib/types/: form.ts  types.ts
src/pages/: index.tsx
src/pages/home/: login.module.scss  login.tsx
src/params/: integer.ts
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/(app)/login/: +page.server.ts  +page.svelte
src/routes/(app)/profile/: +layout.svelte  (+1 more)
src/routes/app/: +layout.server.ts  +layout.svelte
src/routes/logging-in/: +page.svelte
src/routes/login/: +page.server.ts  +page.svelte
src/routes/signup/: +page.server.ts  +page.svelte
src/routes/welcome/: +page.svelte
src/styles/: globals.scss
(+19 files in other folders)
