[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = "0.5.0-rc.2"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
chrono = "0.4.23"
jsonwebtokens = "1.2.0"
serde_json = "1"
tinytemplate = "1.1"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
